src-errormsg/E32-UnsupportedTypeFamilies/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E32-UnsupportedTypeFamilies/Plinth.hs:16:3: error: [GHC-83865]
    • Couldn't match expected type: DefaultOf a
                  with actual type: DefaultOf a0
        NB: ‘DefaultOf’ is a non-injective type family
        The type variable ‘a0’ is ambiguous
    • In the ambiguity check for ‘defaultVal’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      When checking the class method:
        defaultVal :: forall {k} (a :: k). HasDefault a => DefaultOf a
      In the class declaration for ‘HasDefault’
   |
16 |   defaultVal :: DefaultOf a
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
